lms/static/sass/partials/lms/theme/_extras.scss
/* ... */
.help-link {
  color: #454545 !important;
  font-weight: 500 !important;
}

.username{
  font-size: 18px !important;
  font-weight: 400 !important;
}

.fa-chevron-down{
  font-size: 0.65rem !important;
}

.secondary {
  margin: 8px 40px 0 0 !important;

  .mobile-nav-item {
    font-size: 18px !important;
}
}
@media (min-width: 768px) {
  .wrap-instructor-info {
    display: flex !important;
    flex-wrap: wrap;
    gap: 10px;
    width: 100%;
    flex-shrink: 0;
  }
}
.wrap-instructor-info .instructor-info-action {
  margin-left: 0px !important;
}

